# cargo-chat

./: Cargo.toml  shell.nix  yae.json
migrations/: 0001_cargo-chat.sql
src/: cli.rs  db.rs  main.rs  util.rs
src/db/: indexer.rs
